--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "themystic-bot-md",
+  "name": "𝗞𝗜𝗟𝗟 - 𝗕𝗢𝗧 ",
   "version": "1.0.0",
   "description": "Un chatbot automatizado para WhatsApp basado en Node.js, que permite realizar múltiples funciones y personalizaciones en la plataforma.",
   "main": "index.js",
@@ -16,16 +16,16 @@
     "eslint": "eslint .",
     "eslintfix": "eslint --fix ."
   },
-  "homepage": "https://github.com/Santx07/KillzN",
+  "homepage": "https://github.com/KillzN/Prueba",
   "author": {
-    "name": "BrunoSobrino"
+    "name": "ineffable.mvrco"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Santx07/KillzN.git"
+    "url": "git+https://github.com/KillzN/Prueba.git"
   },
   "bugs": {
-    "url": "https://github.com/Santx07/KillzN/issues"
+    "url": "https://github.com/KillzN/Prueba/issues"
   },
   "license": "GPL-3.0-or-later",
   "dependencies": {
@@ -95,7 +95,7 @@
     "ytdl-core": "github:khlevon/node-ytdl-core#v4.11.4-patch.2"
   },
   "optionalDependencies": {
-    "@xct007/frieren-scraper": "github:BrunoSobrino/frieren-scraper",
+    "@xct007/frieren-scraper": "github:ineffable.mvrco/frieren-scraper",
     "wa-sticker-formatter": "^4.3.2"
   },
   "devDependencies": {
