--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/KillzN/Prueba",
   "author": {
-    "name": "ineffable.mvrco"
+    "name": "KILLZN"
   },
   "repository": {
     "type": "git",
