--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
     "name": "𝗞𝗜𝗟𝗟 - 𝗕𝗢𝗧 ",
     "description": "Un chatbot automatizado para WhatsApp basado en Node.js, que permite realizar múltiples funciones y personalizaciones en la plataforma.",
-    "repository": "https://github.com/KillzN/Prueba",
+    "repository": "https://github.com//Perfect3",
     "logo": "https://i.ibb.co/Qn1W6cP/image.png"
   }
