--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/KillzN/Perfect3",
   "author": {
-    "name": "KILLZN"
+    "name": "𝐊𝐈𝐋𝐋𝐙𝐍"
   },
   "repository": {
     "type": "git",
